Edit has been made to Index

--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imitation</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Imitation</title>
 </head>
 <body>
- <p>Welcome to Imitation</p>
-  <p>this is a high grade discord bot i have made on spare time while i was bored</p>
-  <p>This bot can be used for many things.</p>
-  <p>There is lots of tools that you casn use.</p>
+  <p>Welcome to imitation</p>
+    <p>This bot will be able to do many things</p>
+  <p>Below will be a table with a list of things this bot can do</p>
+    <table style="width:100%">
+<tr>
+  <th>Admin Tools</th>
+    
+
+
+
+
+
+    </tr>
 </body>
 </html>
