Redoing index.html

--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
     <table style="width:100%">
 <tr>
   <th>Admin Tools</th>
-    
+     </tr>
+     <tr>
+<td>Mute</td>
+<td>Kick</td>
+<td>Ban</td>
+<td>END OF LIST</td>
+  </tr>
+  </table>
 
+ <p>These are just basic functions there are much more advanced ones</p>
 
-
-
-
-    </tr>
 </body>
 </html>
